# gruvbox-gtk

./: README.md  index.theme  index.theme.normal
gnome-shell/: gnome-shell.css
gtk-2.0/: gtkrc  xfce-notify.rc
gtk-3.0/: gtk-dark.scss  gtk-main-dark.css  gtk-main-normal.css  gtk-normal.gresource.xml  gtk-normal.scss  gtk.css  gtk.gresource
gtk-4.0/: gtk-dark.scss  gtk-main-dark.css  gtk-main-normal.css  gtk-normal.scss  gtk.css  gtk.gresource  meson.build
gtk-4.0/assets/: meson.build
gtk-4.0/sass/: _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _libadwaita-defaults.scss  _libadwaita.scss  gtk.scss.in
